<resources>
    <string name="app_name">PD6</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="Meat">Meat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Fish">Fish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Rice">Rice</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Soup">Soup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Vegetable">Vegetable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Legumes">Legume</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Nuts">Hello Nuts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Drink">Drink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="DairyProducts">Dairy Product</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Candy">Candy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Other">Other</string>
    <string name="showList">Show List En</string>
    <string name="showDish">show Dish</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="deleteDishElement">Delete</string>
    <string name="DeleteDialogTitle">Delete item</string>
    <string name="DeleteDialogMessage">Are you sure you want to delete this item?</string>
    <string name="showQuota">show Quota</string>
    <string name="gender_fld">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age_fld">Age</string>
    <string name="weight_fld">Weight Kg</string>
    <string name="hight_fld">Hight cm</string>
    <string name="active_fld">Activity status</string>
    <string name="calculate_quota">Calculate</string>
    <string name="you_aceed_limit"/>
    <string name="addelement">Add</string>
    <string name="you_have_quota">You have quota</string>
    <string name="you_have_remaining">remaining points</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string-array name="age_range">
        <item>12 - 20</item>
        <item>21 - 35</item>
        <item>36 - 50</item>
        <item>51 - 65</item>
    </string-array>

    <string-array name="active_range">
        <item>بدون نشاط</item>
        <item>غالبا واقف</item>
        <item>مجهود عادي</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
